eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 459181228984.dkr.ecr.ap-southeast-3.amazonaws.com/simple-bank:c0ce4d9c4e132f4d647f71ecc709cb14ade6d11f
        ports:
        - containerPort: 8080
